@@ -1,5 +1,10 @@
 $Id$
 
+2004-02-03 Tilman Sauerbeck <tilman -at- code-monkey.de>
+        * src/playlist.c, src/playlist_item.c, src/callbacks.c:
+          The UI parts and playlist are now correctly re-initialized
+          after a group switch
+
 2004-02-01 Tilman Sauerbeck <tilman -at- code-monkey.de>
         * src/eplayer.c, src/interface.c, src/playlist.c,
           src/playlist_item.c: Each PlayListItem object now
